--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "mongoose": "^5.1.4",
+    "nodemon": "^1.17.5",
     "path": "^0.12.7",
     "rxjs": "^6.0.0",
     "typescript": "~2.7.2",
