--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.5.4",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "jquery": "^3.3.1",
     "mongoose": "^5.1.4",
     "nodemon": "^1.17.5",
     "path": "^0.12.7",
