--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "angular-money-mask": "^1.0.0",
+    "angular-ui-bootstrap": "^2.5.6",
+    "angular-ui-mask": "^1.8.7",
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "mongoose": "^5.1.4",
     "nodemon": "^1.17.5",
     "path": "^0.12.7",
